--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -431,8 +431,8 @@
                 },
                 body: JSON.stringify({
                     date: date,
-                    start_time: startTime,
-                    end_time: endTime
+                    startTime: startTime, // Corrected parameter name
+                    endTime: endTime // Corrected parameter name
                 })
             });
 
@@ -445,10 +445,10 @@
         } catch (error) {
             console.error('Error fetching classrooms:', error);
             document.getElementById('resultsContainer').innerHTML = `
-                    <div class="no-results">
-                        <p>Error loading classrooms. Please try again later.</p>
-                    </div>
-                `;
+                <div class="no-results">
+                    <p>Error loading classrooms. Please try again later.</p>
+                </div>
+            `;
             showToast('Failed to load classrooms', true);
         } finally {
             document.getElementById('loading').style.display = 'none';
@@ -460,84 +460,28 @@
 
         if (!classrooms || classrooms.length === 0) {
             resultsContainer.innerHTML = `
-                    <div class="no-results">
-                        <p>No available classrooms found for your selected time.</p>
-                        <p>Try adjusting your search criteria.</p>
-                    </div>
-                `;
+                <div class="no-results">
+                    <p>No available classrooms found for your selected time.</p>
+                    <p>Try adjusting your search criteria.</p>
+                </div>
+            `;
             return;
         }
 
         let html = '<div class="classroom-grid">';
 
-        classrooms.forEach(classroom => {
+        classrooms.forEach(roomNumber => {
             html += `
-                    <div class="classroom-card">
-                        <div class="classroom-header">
-                            <h3 class="classroom-name">${classroom.building} ${classroom.room_number}</h3>
-                            <span class="classroom-capacity">${classroom.capacity} seats</span>
-                        </div>
-                        <div class="classroom-details">
-                            <div class="detail-item">
-                                <span class="detail-label">Building:</span>
-                                <span class="detail-value">${classroom.building}</span>
-                            </div>
-                            <div class="detail-item">
-                                <span class="detail-label">Room Type:</span>
-                                <span class="detail-value">${classroom.room_type || 'Classroom'}</span>
-                            </div>
-                            <div class="detail-item">
-                                <span class="detail-label">Floor:</span>
-                                <span class="detail-value">${classroom.floor || 'N/A'}</span>
-                            </div>
-                            <div class="detail-item">
-                                <span class="detail-label">Features:</span>
-                                <span class="detail-value">${classroom.features ? classroom.features.join(', ') : 'Standard'}</span>
-                            </div>
-                        </div>
-                        <button class="btn btn-book" onclick="bookClassroom('${classroom.id}', '${document.getElementById('date').value}', '${document.getElementById('startTime').value}', '${document.getElementById('endTime').value}')">
-                            Book Now
-                        </button>
+                <div class="classroom-card">
+                    <div class="classroom-header">
+                        <h3 class="classroom-name">Room: ${roomNumber}</h3>
                     </div>
-                `;
+                </div>
+            `;
         });
 
         html += '</div>';
         resultsContainer.innerHTML = html;
-    }
-
-    async function bookClassroom(classroomId, date, startTime, endTime) {
-        if (!confirm(`Confirm booking for ${date} from ${startTime} to ${endTime}?`)) {
-            return;
-        }
-
-        try {
-            // Make API call to your Spring Boot backend
-            const response = await fetch('/api/bookings', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                },
-                body: JSON.stringify({
-                    classroom_id: classroomId,
-                    date: date,
-                    start_time: startTime,
-                    end_time: endTime,
-                    // You might want to add user_id or other fields here
-                })
-            });
-
-            if (!response.ok) {
-                throw new Error('Booking failed');
-            }
-
-            showToast('Booking successful!');
-            // Refresh the search results
-            searchClassrooms();
-        } catch (error) {
-            console.error('Error booking classroom:', error);
-            showToast('Booking failed. Please try again.', true);
-        }
     }
 
     function showToast(message, isError = false) {
